<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        tools:text="77 - 88 ="/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        tools:text="-11"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnPercent"
                android:text="@string/btn_percent_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnClearE"
                android:text="@string/btn_ce_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnClearAll"
                android:text="@string/btn_clear_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnBackspace"
                android:text="@string/btn_backspace_text"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnInverse"
                android:text="@string/btn_inverse_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnSquare"
                android:text="@string/btn_square_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnSqrt"
                android:text="@string/btn_sqrt_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnDivide"
                android:text="@string/btn_divide_text"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn7"
                android:text="@string/btn_7_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn8"
                android:text="@string/btn_8_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn9"
                android:text="@string/btn_9_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnMultiply"
                android:text="@string/btn_multiply_text"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn4"
                android:text="@string/btn_4_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn5"
                android:text="@string/btn_5_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn6"
                android:text="@string/btn_6_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnDifference"
                android:text="@string/btn_difference_text"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn3"
                android:text="@string/btn_3_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn2"
                android:text="@string/btn_2_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn1"
                android:text="@string/btn_1_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnSum"
                android:text="@string/btn_sum_text"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnSign"
                android:text="@string/btn_sign_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn0"
                android:text="@string/btn_0_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnComma"
                android:text="@string/btn_comma_text"
                android:textSize="24sp" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btnResult"
                android:text="@string/btn_result_text"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>


</LinearLayout>